upping z-index a notch to prevent the problem outlined in https://github.com/yahoo/pure/issues/103

--- a/src/forms/css/forms.css
+++ b/src/forms/css/forms.css
@@ -254,7 +254,7 @@ since IE8 won't execute CSS that contains a CSS3 selector.
 }
 .pure-form .pure-group input:focus,
 .pure-form .pure-group textarea:focus {
-    z-index: 2;
+    z-index: 3;
 }
 .pure-form .pure-group input:first-child,
 .pure-form .pure-group textarea:first-child {
